--- a/player/templates/player/redesign/profile.html
+++ b/player/templates/player/redesign/profile.html
@@ -380,5 +380,6 @@
 	<!-- КОНЕЦ МОДАЛЬНОГО ОКНА НАСТРОЕК -->
 
 	<script src="{% static 'redesign/js/profile.js' %}?{{ csrf_token }}"></script>
+	<script src="{% static 'redesign/js/cropper.js' %}?{{ csrf_token }}"></script>
 
 {% endblock %}
