фикс текста бонуса за репост

--- a/player/templates/player/redesign/player_repost.html
+++ b/player/templates/player/redesign/player_repost.html
@@ -10,7 +10,7 @@
     <p class="ct__s-text">
         <a href="https://vk.com/wall-164930433_3519">перейти к записи (ссылка)</a><br>
         Для получения золота запись должна: <br>
-        - быть первой сверху (не считая закрепа) <br>
+        - быть первой сверху (или после закрепа) <br>
         - пробыть на стене не меньше часа <br>
         Бонус можно получить раз в сутки
     </p>
