--- a/player/templates/player/player_repost.html
+++ b/player/templates/player/player_repost.html
@@ -25,7 +25,7 @@
 </div>
 <div class="row flex" style="margin-top: 1%">
     <div class="col-xs-12 col-sm-12 col-md-12">
-        <b><font size="4" >- быть первой сверху (не считая закрепа)</font></b>
+        <b><font size="4" >- быть первой сверху (или после закрепа)</font></b>
     </div>
 </div>
 <div class="row flex" style="margin-top: 1%">
