отключение локализации в Активах

--- a/storage/templates/storage/assets.html
+++ b/storage/templates/storage/assets.html
@@ -7,6 +7,7 @@
 
 {% block for_scripts_and_css %}
 <script>
+{% localize off %}
     var vol_map = new Map();
     {% for type in storage_cl|get_attr:'types' %}
         {% for good in transport|get_attr:type %}
@@ -35,6 +36,7 @@
     st_{{ storage.pk }}_map[{{ storage.pk }}] = 0;
     send_storages_map[{{ storage.pk }}] = st_{{ storage.pk }}_map;
     {% endfor %}
+ {% endlocalize %}
 </script>
 
 {% if storage_alone %}
