Отключение локализации на Фабрике

--- a/storage/templates/storage/factory/factory.html
+++ b/storage/templates/storage/factory/factory.html
@@ -12,7 +12,7 @@
 {% endblock %}
 {% block content %}
 <script>
-
+{% localize off %}
     var count = 0;
 
     var consignment = 1;
@@ -67,7 +67,7 @@
             {% endwith %}
         {% endfor %}
     {% endfor %}
-
+{% endlocalize %}
 </script>
 <div class="row">
     <div class="col-xs-12 col-sm-12 col-md-12">
