--- a/storage/templates/storage/redesign/assets.html
+++ b/storage/templates/storage/redesign/assets.html
@@ -48,7 +48,7 @@
         <select name="storage_options" id="storage_options" disabled>
             <option value="storage_none" disabled selected>выберите склад</option>
             {% for storage in storages %}
-            <option id="storage_{{ storage.pk }}" value='{{ storage.pk }}'>{{ storage.region.region_name }}</option>
+            <option id="storage_{% localize off %}{{ storage.pk }}{% endlocalize %}" value='{% localize off %}{{ storage.pk }}{% endlocalize %}'>{{ storage.region.region_name }}</option>
             {% endfor %}
         </select>
         <svg width="15" height="8" viewBox="0 0 15 8" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -83,7 +83,7 @@
         <label class="actives__region ct__select-region">
           <select id="storages_tabs">
             {% for storage in storages %}
-            <option value="{% localize off %}{{ storage.pk }}{% endlocalize %}">{{ storage.region }}</option>
+            <option value="{% localize off %}{% localize off %}{{ storage.pk }}{% endlocalize %}{% endlocalize %}">{{ storage.region }}</option>
             {% endfor %}
           </select>
             <svg width="21" height="11" viewBox="0 0 21 11" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -93,7 +93,7 @@
         {% for storage in storages %}
         {% if storage_alone and not storage.was_moved and player.region != storage.region %}
         <!--Кнопка перемотки-->
-        <button type="submit" onclick="move_storage(event, {{ storage.pk }})">
+        <button type="submit" onclick="move_storage(event, {% localize off %}{{ storage.pk }}{% endlocalize %})">
             <svg width="45" height="30" viewBox="0 0 45 30" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M6 1L1 6V29H39L44 24V1H6Z" stroke="var(--c10two)"/>
                 <path d="M24 15L9 23.6603L9 6.33974L24 15Z" fill="var(--c10two)"/>
@@ -106,7 +106,7 @@
 
     <!-- Таблица Активов -->
     {% for storage in storages %}
-    <div id="table_{{ storage.pk }}" class="actives__table" {% if forloop.counter0 != 0 %}style="display: none"{% endif %}>
+    <div id="table_{% localize off %}{{ storage.pk }}{% endlocalize %}" class="actives__table" {% if forloop.counter0 != 0 %}style="display: none"{% endif %}>
         <!--Наличные-->
       <div class="ct__s">
         <h2 class="ct__s-title">{{ storage.valut|dict_key:'cash' }}:</h2>
@@ -121,10 +121,10 @@
         <h2 class="ct__s-title">{{ storage_cl|get_attr:group|dict_key:good }}:</h2>
         <div class="ct__s-text-input">
 					<label>
-						<input type="number" value="0" step="1" min="0" max="{% localize off %}{{ storage|get_attr:good }}{% endlocalize %}" data-storage_id="{{ storage.pk }}" data-good_name="{{ good }}" class="good_input" name="{{ storage.pk }}_{{ good }}">
+						<input type="number" value="0" step="1" min="0" max="{% localize off %}{{ storage|get_attr:good }}{% endlocalize %}" data-storage_id="{% localize off %}{{ storage.pk }}{% endlocalize %}" data-good_name="{{ good }}" class="good_input" name="{% localize off %}{{ storage.pk }}{% endlocalize %}_{{ good }}">
 					</label>
 					<span>/ {{ storage|get_attr:good }}</span>
-					<span>объем (ед): <span id="{{ storage.pk }}_{{ good }}_places" data-text="0">0</span></span>
+					<span>объем (ед): <span id="{% localize off %}{{ storage.pk }}{% endlocalize %}_{{ good }}_places" data-text="0">0</span></span>
 				</div>
       </div>
             {% endif %}
