--- a/storage/templates/storage/factory/factory.html
+++ b/storage/templates/storage/factory/factory.html
@@ -41,13 +41,13 @@
 
     var total_stocks = {};
     {% for storage in storages %}
-        total_stocks["{{ storage|dict_key:'pk' }}"] = {};
+        total_stocks["{% localize off %}{{ storage|dict_key:'pk' }}{% endlocalize %}"] = {};
         {% for group in crude_list %}
             {% for good in storage_cl|get_attr:group %}
-                total_stocks["{{ storage|dict_key:'pk' }}"]['{{ good }}'] = {% localize off %}{{ storage|dict_key:good }}{% endlocalize %};
+                total_stocks["{% localize off %}{{ storage|dict_key:'pk' }}{% endlocalize %}"]['{{ good }}'] = {% localize off %}{{ storage|dict_key:good }}{% endlocalize %};
                 {% if good != 'cash' %}
                 {% with good_cap=good|get_sum:'_cap' %}
-                total_stocks["{{ storage|dict_key:'pk' }}"]['{{ good }}_cap'] = {% localize off %}{{ storage|dict_key:good_cap }}{% endlocalize %};
+                total_stocks["{% localize off %}{{ storage|dict_key:'pk' }}{% endlocalize %}"]['{{ good }}_cap'] = {% localize off %}{{ storage|dict_key:good_cap }}{% endlocalize %};
                 {% endwith %}
                 {% endif %}
             {% endfor %}
@@ -79,7 +79,7 @@
                 <div class="col-xs-6 col-sm-6 col-md-6" align="left">
                     <select name="storage" id="storage">
                         {% for storage in storages %}
-                        <option {% if storage == storages|first %} selected {% endif %} value="{{ storage|dict_key:'pk' }}">{{ storage|dict_key:'region__region_name' }}</option>
+                        <option {% if storage == storages|first %} selected {% endif %} value="{% localize off %}{{ storage|dict_key:'pk' }}{% endlocalize %}">{{ storage|dict_key:'region__region_name' }}</option>
                         {% endfor %}
                     </select>
                 </div>
